--- a/partial-about.html
+++ b/partial-about.html
@@ -1,10 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<!-- partial-home.html -->
 
-</body>
-</html>
+<div class="jumbotron text-center">
+    <h1>The Homey Pages</h1>
+    <p>This page demonstrates <span class="text-danger">nested</span>views.</p>
+</div>
