--- a/partial-home.html
+++ b/partial-home.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<!-- partial-home.html -->
 
-</body>
-</html>
+<div class="jumbotron text-center">
+    <h1>The Homey Page</h1>
+    <p>This page demonstrates <span class="text-danger">nested</span> views.</p>
+
+    <a data-ui-sref=".list" class="btn btn-primary">List</a>
+    <a data-ui-sref=".paragraph" class="btn btn-danger">Paragraph</a>
+</div>
+
+<div data-ui-view></div>
