--- a/partial-about.html
+++ b/partial-about.html
@@ -1,6 +1,19 @@
-<!-- partial-home.html -->
+<!-- partial-about.html -->
 
 <div class="jumbotron text-center">
-    <h1>The Homey Pages</h1>
-    <p>This page demonstrates <span class="text-danger">nested</span>views.</p>
+    <h1>The About Page</h1>
+    <p>This page demonstrates <span class="text-danger">multiple</span> <span class="danger">named</span> views.</p>
+</div>
+
+<div class="row">
+
+    <!-- COLUMN ONE NAMED VIEW -->
+    <div class="col-sm-6">
+        <div data-ui-view="columnOne"></div>
+    </div>
+
+    <!-- COLUMN TWO NAMED VIEW -->
+    <div class="col-sm-6">
+        <div data-ui-view="columnTwo"></div>
+    </div>
 </div>
