--- a/partial-home-list.html
+++ b/partial-home-list.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<!-- partial-home-list.html -->
 
-</body>
-</html>
+<ul>
+    <li data-ng-repeat="dog in dogs">{{ dog }}</li>
+</ul>
